Fix spacing on iphone sections.

--- a/css/styles.css
+++ b/css/styles.css
@@ -85,8 +85,22 @@
   letter-spacing: -1.5px;
   line-height: 30px;
   width: 400px;
-  float: left; }
+  float: left;
+  margin-top: 2vh; }
 
+@media (min-width: 960px) {
+  .create-content {
+    width: 920px; }
+
+  .create-blurb {
+    width: 550px; }
+
+  .create-title {
+    padding-top: 26vh;
+    width: 550px; }
+
+  .create-phone {
+    margin-top: -28vh; } }
 .distort-section {
   background: url(../assets/images/distort_background.jpg);
   background-size: cover;
@@ -116,8 +130,15 @@
   font-family: "din-next";
   color: #DFA29A;
   letter-spacing: -1.5px;
-  line-height: 30px; }
+  line-height: 30px;
+  margin-top: 3vh; }
 
+@media (min-width: 960px) {
+  .distort-content {
+    width: 920px; }
+
+  .distort-title {
+    margin-top: 20vh; } }
 .interact-section {
   background: url(../assets/images/interact_background.jpg);
   background-size: cover;
@@ -129,7 +150,8 @@
 
 .interact-phone {
   display: block;
-  margin: 0 auto; }
+  margin: 0 auto;
+  margin-top: 4vh; }
 
 .interact-title {
   font-size: 70px;
@@ -140,13 +162,19 @@
   text-align: center; }
 
 .interact-blurb {
+  margin: 0 auto;
   font-size: 27px;
   font-family: "din-next";
   color: #DFA29A;
   letter-spacing: -1.5px;
   line-height: 30px;
-  text-align: center; }
+  text-align: center;
+  margin-top: 4vh;
+  width: 750px; }
 
+@media (min-width: 1024px) {
+  .interact-blurb {
+    width: 1000px; } }
 .footer-section {
   background: url(../assets/images/footer_background.jpg);
   background-size: cover;
